interfaces/julia/src/generated/libctreactor.jl

# This file was generated by generate/generate_bindings.jl.
# Source header: cantera_clib/ctreactor.h
# DO NOT EDIT: regenerate with `julia generate/generate_bindings.jl`.

function reactor_new(model, phase, clone, name)
    ccall((:reactor_new, libcantera[]), Int32, (Cstring, Int32, Int32, Cstring,), model, phase, clone, name)
end

function reactor_newSurface(phase, reactorsLen, reactors, clone, name)
    ccall((:reactor_newSurface, libcantera[]), Int32, (Int32, Int32, Ptr{Int32}, Int32, Cstring,), phase, reactorsLen, reactors, clone, name)
end

function reactor_newSurfaceOfType(model, phase, reactorsLen, reactors, clone, name)
    ccall((:reactor_newSurfaceOfType, libcantera[]), Int32, (Cstring, Int32, Int32, Ptr{Int32}, Int32, Cstring,), model, phase, reactorsLen, reactors, clone, name)
end

function reactor_type(handle, bufLen, buf)
    ccall((:reactor_type, libcantera[]), Int32, (Int32, Int32, Ptr{UInt8},), handle, bufLen, buf)
end

function reactor_name(handle, bufLen, buf)
    ccall((:reactor_name, libcantera[]), Int32, (Int32, Int32, Ptr{UInt8},), handle, bufLen, buf)
end

function reactor_setName(handle, name)
    ccall((:reactor_setName, libcantera[]), Int32, (Int32, Cstring,), handle, name)
end

function reactor_phase(handle)
    ccall((:reactor_phase, libcantera[]), Int32, (Int32,), handle)
end

function reactor_setInitialVolume(handle, vol)
    ccall((:reactor_setInitialVolume, libcantera[]), Int32, (Int32, Float64,), handle, vol)
end

function reactor_area(handle)
    ccall((:reactor_area, libcantera[]), Float64, (Int32,), handle)
end

function reactor_setArea(handle, a)
    ccall((:reactor_setArea, libcantera[]), Int32, (Int32, Float64,), handle, a)
end

function reactor_chemistryEnabled(handle)
    ccall((:reactor_chemistryEnabled, libcantera[]), Int32, (Int32,), handle)
end

function reactor_setChemistryEnabled(handle, cflag)
    ccall((:reactor_setChemistryEnabled, libcantera[]), Int32, (Int32, Int32,), handle, cflag)
end

function reactor_energyEnabled(handle)
    ccall((:reactor_energyEnabled, libcantera[]), Int32, (Int32,), handle)
end

function reactor_setEnergyEnabled(handle, eflag)
    ccall((:reactor_setEnergyEnabled, libcantera[]), Int32, (Int32, Int32,), handle, eflag)
end

function reactor_mass(handle)
    ccall((:reactor_mass, libcantera[]), Float64, (Int32,), handle)
end

function reactor_volume(handle)
    ccall((:reactor_volume, libcantera[]), Float64, (Int32,), handle)
end

function reactor_density(handle)
    ccall((:reactor_density, libcantera[]), Float64, (Int32,), handle)
end

function reactor_temperature(handle)
    ccall((:reactor_temperature, libcantera[]), Float64, (Int32,), handle)
end

function reactor_enthalpy_mass(handle)
    ccall((:reactor_enthalpy_mass, libcantera[]), Float64, (Int32,), handle)
end

function reactor_pressure(handle)
    ccall((:reactor_pressure, libcantera[]), Float64, (Int32,), handle)
end

function reactor_massFraction(handle, k)
    ccall((:reactor_massFraction, libcantera[]), Float64, (Int32, Int32,), handle, k)
end

function reactor_massFractions(handle, bufLen, buf)
    ccall((:reactor_massFractions, libcantera[]), Int32, (Int32, Int32, Ptr{Float64},), handle, bufLen, buf)
end

function reactor_nSensParams(handle)
    ccall((:reactor_nSensParams, libcantera[]), Int32, (Int32,), handle)
end

function reactor_addSensitivityReaction(handle, rxn)
    ccall((:reactor_addSensitivityReaction, libcantera[]), Int32, (Int32, Int32,), handle, rxn)
end

function reactor_massFlowRate(handle)
    ccall((:reactor_massFlowRate, libcantera[]), Float64, (Int32,), handle)
end

function reactor_setMassFlowRate(handle, mdot)
    ccall((:reactor_setMassFlowRate, libcantera[]), Int32, (Int32, Float64,), handle, mdot)
end

function reactor_del(handle)
    ccall((:reactor_del, libcantera[]), Int32, (Int32,), handle)
end

function reactor_cabinetSize()
    ccall((:reactor_cabinetSize, libcantera[]), Int32, ())
end
